@@ -891,14 +891,15 @@ void main_update_fonts( GtkWidget* widget, PtkFileBrowser* file_browser )
                 font_desc = pango_font_description_from_string( fontname );
                 gtk_widget_modify_font( GTK_WIDGET( a_browser->folder_view ),
                                                                     font_desc );
-                /*
+                
                 if ( a_browser->view_mode != PTK_FB_LIST_VIEW )
                 {
-                    //FIXME: need to trigger update of exo icon view for gtk2 for current tab
-                    // or font is not updated for current tab
-                    gtk_widget_queue_draw( GTK_WIDGET( a_browser->folder_view ) );
+                    // force rebuild of folder_view for font change in exo_icon_view
+                    gtk_widget_destroy( a_browser->folder_view );
+                    a_browser->folder_view = NULL;
+                    ptk_file_browser_update_views( NULL, a_browser );
                 }
-                */
+                
                 if ( a_browser->side_dir )
                     gtk_widget_modify_font( GTK_WIDGET( a_browser->side_dir ),
                                                                     font_desc );
